# notepadA

./: .gitignore  DESIGN.md  PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  lib.rs
src-tauri/src/buffer/: line_index.rs  mod.rs  piece_table.rs
src-tauri/src/commands/: edit_cmds.rs  file_cmds.rs  mod.rs  search_cmds.rs  viewport_cmds.rs
src-tauri/src/file/: encoding.rs  mapper.rs  mod.rs  saver.rs
src-tauri/src/search/: mod.rs  regex_search.rs  text_search.rs
src-tauri/src/viewport/: manager.rs
src-tauri/tests/: integration_test.rs
src/components/Dialogs/: GotoLineDialog.tsx
src/components/Editor/: EditorView.tsx
src/components/MenuBar/: MenuBar.tsx
src/components/Search/: SearchBar.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/TabBar/: TabBar.tsx
src/hooks/: useEditor.ts
src/services/: tauriApi.ts
src/types/: editor.ts
