[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

# Memory-mapped file I/O
memmap2 = "0.9"

# Fast byte scanning (SIMD-accelerated memchr)
memchr = "2"

# Encoding detection and conversion
encoding_rs = "0.8"
chardetng = "0.1"

# Data structures
lru = "0.12"

# UUID for tab IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Sync primitives
parking_lot = "0.12"

# Regular expressions
regex = "1"
